--- a/ftplugin/latex-suite/templates/article.tex
+++ b/ftplugin/latex-suite/templates/article.tex
@@ -71,7 +71,7 @@
 %\newtheorem{proposition}[definition]{\hspace{2em}命题}
 %\newtheorem{corollary}[definition]{\hspace{2em}推论}
 %\newtheorem{remark}{\hspace{2em}注}[chapter] 
- 
+%\numberwithin{equation}{section}
 % 设置页眉页脚
 %==================================================
 \renewcommand{\headrulewidth}{0.4pt}
