修改了关于折叠的相关语句

--- a/ftplugin/latex-suite/templates/article.tex
+++ b/ftplugin/latex-suite/templates/article.tex
@@ -89,21 +89,21 @@
 
 % 设置中文字体
 %==================================================
-\setCJKmainfont[BoldFont=STHeiti,ItalicFont=STKaiti]{STSong}
-% \setCJKmainfont[BoldFont={Adobe Heiti Std}, ItalicFont={Adobe Kaiti Std}]{Adobe Song Std}
-\setCJKsansfont{STHeiti}
-% \setCJKsansfont{Adobe Song Std}
-\setCJKmonofont{STFangsong}
-% \setCJKmonofont{Adobe Fangsong Std}
+%\setCJKmainfont[BoldFont=STHeiti,ItalicFont=STKaiti]{STSong}
+\setCJKmainfont[BoldFont={Adobe Heiti Std}, ItalicFont={Adobe Kaiti Std}]{Adobe Song Std}
+%\setCJKsansfont{STHeiti}
+\setCJKsansfont{Adobe Song Std}
+%\setCJKmonofont{STFangsong}
+\setCJKmonofont{Adobe Fangsong Std}
  
-\setCJKfamilyfont{zhsong}{STSong}
-% \setCJKfamilyfont{zhsong}{Adobe Song Std}
-\setCJKfamilyfont{zhhei}{STHeiti}
-% \setCJKfamilyfont{zhhei}{Adobe Heiti Std}
-\setCJKfamilyfont{zhfs}{STFangsong}
-% \setCJKfamilyfont{zhfs}{Adobe Song Std}
-\setCJKfamilyfont{zhkai}{STKaiti}
-% \setCJKfamilyfont{zhkai}{Adobe Kaiti Std}
+%\setCJKfamilyfont{zhsong}{STSong}
+\setCJKfamilyfont{zhsong}{Adobe Song Std}
+%\setCJKfamilyfont{zhhei}{STHeiti}
+\setCJKfamilyfont{zhhei}{Adobe Heiti Std}
+%\setCJKfamilyfont{zhfs}{STFangsong}
+\setCJKfamilyfont{zhfs}{Adobe Song Std}
+%\setCJKfamilyfont{zhkai}{STKaiti}
+\setCJKfamilyfont{zhkai}{Adobe Kaiti Std}
  
 \newcommand*{\songti}{\CJKfamily{zhsong}} % 宋体
 \newcommand*{\heiti}{\CJKfamily{zhhei}}   % 黑体
